Revisions on CSS

--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ textarea {
 }
 
 .linkedin {
-  background: url('images/Linkedin.svg') no-repeat;
+  background: url('images/LinkedIn.svg') no-repeat;
   width: 61px;
   height: 61px;
   margin-top: 15px;
