--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .header-img {
-  background: url("https://s26.postimg.org/d2wup8gk9/Screen_Shot_2017-09-09_at_2.44.05_PM.png") no-repeat center;
+  background: url("https://s26.postimg.org/8xtsw7v89/Screen_Shot_2017-09-11_at_9.36.11_AM.png") no-repeat center;
   height: 583px;
   width: 950px;
   background-size: contain;
